# netbsd_c23

./: CMakeLists.txt  LICENSE
cmake/: Macros.cmake
include/: nbmath.h  nbmath_private.h  stdbit.h  stdckdint.h  stddef.h  stdlib.h
man/: stdbit.3  stdc_bit_ceil.3  stdc_bit_floor.3  stdc_bit_width.3  stdc_count_ones.3  stdc_count_zeros.3  stdc_has_single_bit.3  stdc_leading_ones.3  stdc_leading_zeros.3  stdc_trailing_ones.3  stdc_trailing_zeros.3
src/: stdbit.c  stddef.c  stdlib.c
src/libm/: e_hypotl.c  e_remainderl.c  s_remquol.c
src/stdbit/: leadtrail.h  stdc_bit_ceil.c  stdc_bit_floor.c  stdc_bit_width.c  stdc_count_ones.c  stdc_count_zeros.c  stdc_first_leading_one.c  stdc_first_leading_zero.c  stdc_first_trailing_one.c  stdc_first_trailing_zero.c  stdc_has_single_bit.c  stdc_leading_ones.c  stdc_leading_zeros.c  stdc_trailing_ones.c  stdc_trailing_zeros.c
tests/: t_stdbit.c  test_math.c  test_memalignment.c  test_stdbit.c
